--- a/Draw/Controller/Contest/ContestController.xib
+++ b/Draw/Controller/Contest/ContestController.xib
@@ -192,8 +192,8 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="734136799"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">1</int>
-					<bytes key="NSRGB">MCAwIDAAA</bytes>
+					<int key="NSColorSpace">2</int>
+					<bytes key="NSRGB">MC45NjA3ODQzMTM3IDAuOTQxMTc2NDcwNiAwLjg2NjY2NjY2NjcAA</bytes>
 				</object>
 				<array key="IBUIGestureRecognizers" id="0"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
